[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu.saito@moai-lab.jp"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fire>=0.7.0",
  "nicegui>=2.20.0",
  "numpy>=2.3.1",
]
description = "CoCircular"
name = "nicegui-cocircular"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-cocircular"

[project.scripts]
cocircular = "nicegui_cocircular:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "COM812",
  "CPY",
  "D203",
  "D213",
  "D400",
  "D415",
  "DOC201",
  "DOC402",
  "DOC501",
  "E501",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
